Fix Projects section alignment

--- a/style.css
+++ b/style.css
@@ -210,11 +210,9 @@ nav svg:hover path {
     color: var(--text-1);
     font-size: var(--fs-h3);
     margin: 0;
-}
-
-.projects__text {
     text-transform: uppercase;
     font-weight: 500;
+    margin: 10px 0px;
 }
 
 .projects__languages {
@@ -236,6 +234,7 @@ nav svg:hover path {
     display: flex;
     gap: 40px;
     min-height: 50px;
+    margin-bottom: 20px;
 }
 
 
@@ -312,7 +311,7 @@ a.underline {
     font-weight: 700;
     color: var(--text-1);
     text-decoration-color: var(--green);
-    text-underline-offset: 5px;
+    text-underline-offset: 6px;
     text-decoration-thickness: 2px;
     transition: color var(--transition);
 }
